processed/jira/txt/LU/LU-17941.txt
Key:        LU-17941
Summary:    filter_fid_le_to_cpu failed on RHEL 8.10
Link:       https://jira.whamcloud.com/browse/LU-17941
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Zhenyu Xu
Reporter:   Zhenyu Xu
Created:    Wed, 12 Jun 2024 14:31:28 +0000
Updated:    Tue, 25 Jun 2024 12:46:51 +0000
Resolved:   Tue, 25 Jun 2024 10:56:04 +0000

--- Description ---
The following build failure on RHEL 8.10 server:

In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:411:3:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:419:3:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:411:3,
    inlined from 'ofd_object_ff_load' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/ofd/ofd_objects.c:171:2:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:419:3,
    inlined from 'ofd_object_ff_load' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/ofd/ofd_objects.c:171:2:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[7]: *** [scripts/Makefile.build:317: /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/ofd/ofd_objects.o] Error 1
make[6]: *** [scripts/Makefile.build:558: /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/ofd] Error 2
make[6]: *** Waiting for unfinished jobs.... 
In file included from include/linux/string.h:254,
                 from include/linux/bitmap.h:9,
                 from include/linux/cpumask.h:12,
                 from ./arch/x86/include/asm/cpumask.h:5,
                 from ./arch/x86/include/asm/msr.h:11,
                 from ./arch/x86/include/asm/processor.h:21,
                 from ./arch/x86/include/asm/cpufeature.h:5,
                 from ./arch/x86/include/asm/thread_info.h:53,
                 from include/linux/thread_info.h:39,
                 from ./arch/x86/include/asm/preempt.h:7,
                 from include/linux/preempt.h:78,
                 from include/linux/spinlock.h:55,
                 from include/linux/wait.h:9,
                 from include/linux/wait_bit.h:8,
                 from include/linux/fs.h:7,
                 from /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/osd-ldiskfs/osd_io.c:46:
In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:411:3,
    inlined from 'osd_lseek' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/osd-ldiskfs/osd_io.c:2833:3:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In function 'fortify_memset_chk',
    inlined from 'filter_fid_le_to_cpu' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/include/lustre_fid.h:419:3,
    inlined from 'osd_lseek' at /tmp/rpmbuild-lustre-jenkins-MTHRY7yn/BUILD/lustre-gc19f03b/lustre/osd-ldiskfs/osd_io.c:2833:3:
include/linux/fortify-string.h:239:4: error: call to '__write_overflow_field' declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror]
    __write_overflow_field(p_size_field, size);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (bobijam, Tue, 25 Jun 2024 10:56:04 +0000) ---
Merged for 2.16

--- Comment (gerrit, Tue, 25 Jun 2024 03:24:42 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/55408/

Subject: LU-17941 ofd: do not copy over filter_fid structure

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 23bebc2da59ff5204bf89f2bf1f7924afdde0f37

--- Comment (gerrit, Wed, 12 Jun 2024 14:42:11 +0000) ---
"Zhenyu Xu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55408

Subject: LU-17941 ofd: do not copy over filter_fid structure

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 6678c1ed77bf83642eed7b8fd6a0cc96f12ad725
